# tiny-wlhs

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TTY.sh  cabal.project  commands.txt  flake.nix  fourmolu.yaml  hie.yaml  output.txt  output1.txt  output2.tclear  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  runSwaybg.sh  runWbg.sh  shell.nix  strace_output.txt  tiny-wlhs.cabal
.github/workflows/: ci.yml  release.yml
exe/: Main.hs
exe/TinyWL/: FFI.hs  Server.hsc
nix/: nixpkgs.nix  sources.json
scripts/: format-haskell-in-project.sh  runSwww.sh
src/: Config.hs  ExampleCompositor.hs  Main.hs  Setup.hs
src/LibTinyWLHS/Compositor/: Compositor.hs  FFI.hs  Types.hs
src/LibTinyWLHS/KeyBinding/: KeyBindings.hs  KeySyms.hs
src/LibTinyWLHS/Server/: FFI.hs  Server.hsc  Types.hs
src/TinyWL/: KeyBindings.hs  KeySyms.hs
src/TinyWL/Compositor/: Compositor.hs  FFI.hs  Types.hs
src/TinyWL/Server/: FFI.hs  Server.hsc  Types.hs
tinywl/: Makefile.shared  compile_commands.json  diff.txt  tinywl.c  tinywl.h
tinywl/.cache/clangd/index/: tinywl.c.CAAC249B79635157.idx  tinywl.h.DAC9F6681952CE04.idx  wlr-layer-shell-unstable-v1-protocol.h.C43C96C7B0582977.idx  xdg-shell-protocol.h.3212F5DEEB915764.idx
tinywl/include/: cursor.h  input.h  keyboard.h  layer.h  output.h  seat.h  server.h  surface.h  toplevel.h
tinywl/src/: keyboard.c  output.c  seat.c  server.c  surface.c  toplevel.c
