cabal-version:      3.0
name:               tiny-wlhs
version:            0.1.0.0
synopsis:           An attempt to create a haskell implementation of tinywl to test wlrroots bindings
homepage:           TBD
license:            BSD-3-Clause
license-file:       LICENSE
author:             l-Shane-l
maintainer:         shane@peregrinum.dev
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tiny-wlhs
    import:           warnings
    main-is:          Main.hs
    other-modules:    TinyWL.FFI
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   exe
    default-language: Haskell2010
    
    -- Add these lines for FFI support
    default-extensions:       ForeignFunctionInterface
    extra-libraries:  tinywl
    extra-lib-dirs:   tinywl
    
    -- If you need to specify include directories
    include-dirs:     tinywl
    
    -- Additional GHC options for linking
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
