cabal-version:      3.0
name:               tiny-wlhs
version:            0.1.0.4
synopsis:           An attempt to create a haskell implementation of tinywl to test wlrroots bindings
homepage:           TBD
license:            BSD-3-Clause
license-file:       LICENSE
author:             l-Shane-l
maintainer:         shane@peregrinum.dev
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tiny-wlhs
    import:           warnings
    main-is:          ExampleCompositor.hs
    other-modules:    TinyWL.Server.FFI
                 ,    TinyWL.Server.Server
                 ,    TinyWL.Server.Types
                 ,    TinyWL.Compositor.Compositor
                 ,    TinyWL.Compositor.FFI
                 ,    TinyWL.Compositor.Types
                 ,    TinyWL.KeyBindings
                 ,    TinyWL.KeySyms
    build-depends:    base ^>=4.18.2.1
                 ,    unix
                 ,    process
                 ,    wlhs-bindings

    hs-source-dirs:   src
    default-language: Haskell2010
    
    -- Add these lines for FFI support
    default-extensions:       ForeignFunctionInterface
    extra-libraries:  tinywl xkbcommon
    extra-lib-dirs:   tinywl
    
    -- If you need to specify include directories
    include-dirs:     tinywl
    
    -- Additional GHC options for linking
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
